Removed all remaining JIDE components; links to new doc site
Rewrote the ErrorWidget to use standard Swing components.
Rewrote the GeneSearchList to use standard Swing components.
Rewrote the TemplateChooser to use standard Swing components.
Rewrote the LeadingEdge wdigets to use standard Swing components.
Rewrote the StatusBarAppender (logging) widget to use standard Swing
components.
Modifed the standard tabbed view to use standard Swing components.
Modifed the Preferences Dialog to use standard Swing components.
Note that in the above we may have lost some minor functionality or
changed the appearance of components.
Removed all JIDE jars and updated the build script.
Wrote custom code to save-on-exit & restore-on start window position &
dimension.  Also includes out-of-bounds checks in case the user switches
between screens with differing resolution.
Collapsed the DialogDescriptor class hierarchy to get rid of the
unnecessary interface and replace the (sole) JIDE-based implementation
with a Swing-based one.
Upated citing info to includ the Mouse MSigDB paper.
Fixed minor formatting issue with Cytoscape port